--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "webpack": "^5.12.3",
-    "webpack-cli": "^4.3.1"
+    "webpack-cli": "^4.3.1",
+    "wsdot-elc": "^4.0.0-0"
   },
   "dependencies": {},
   "repository": {
