--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "prepare": "webpack",
     "watch": "webpack -w",
-    "lint": "eslint . --ext .ts --fix"
+    "lint": "eslint . --ext .ts --fix",
+    "ghpages": "gh-pages --remove node_modules --dist ."
   },
   "author": "Jeff Jacobson",
   "private": true,
@@ -16,6 +17,7 @@
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "eslint": "^7.17.0",
+    "gh-pages": "^3.1.0",
     "source-map": "^0.7.3",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
